--- a/index.html
+++ b/index.html
@@ -60,10 +60,8 @@
           </button>
         </form>
       </div>
-      <div class="bg-[#fff] p-4 mt-8">
-        <div class="">
-          <div id="bookmarksResults"></div>
-        </div>
+      <div class="p-4 mt-8">
+        <div id="bookmarksResults"></div>
       </div>
       <footer class="text-[.7rem]">
         <p>&copy; 2022 | Kabir Hossain</p>
